# Ask-Your-Docs

./: README.md  makefile
backend/: .env.example  main.py  pyproject.toml  test_upload_script.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/documents/: route.py
backend/app/api/v1/message/: route.py
backend/app/core/: config.py
backend/app/services/: chunking.py  document.py  embedding.py  message.py  prompt.py  vector_database.py
backend/qdrant/collection/documents/: storage.sqlite
backend/uploads/: documents.json
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatArea.tsx  Sidebar.tsx
frontend/components/providers/: QueryProvider.tsx
frontend/components/ui/: Button.tsx  Input.tsx  Select.tsx
frontend/hooks/queries/: documents.ts  message.ts
frontend/lib/: api.ts
